changes in our code

--- a/templates/Contact-Us.html
+++ b/templates/Contact-Us.html
@@ -36,7 +36,7 @@
 
           <div class="d-flex align-items-center mb-3">
             <i class="fas fa-map-marker-alt fa-lg text-primary me-2"></i>
-            <p class="mb-0"><strong>Taj Hotel</strong>, Rajkot</p>
+            <p class="mb-0"><strong>Ardas Group Of Hotel</strong>, Rajkot</p>
           </div>
 
           <div class="d-flex align-items-center mb-3">
