--- a/templates/Features.html
+++ b/templates/Features.html
@@ -68,7 +68,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Our Hotel Features</h1>
+      <h1>Our Hotel Features In All India</h1>
 
       <div class="feature-section">
         <h2>Luxury Accommodations</h2>
