--- a/templates/Header.html
+++ b/templates/Header.html
@@ -16,7 +16,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 20px;
-        background: #2c3e50;
+        background: black;
         color: white;
         margin-bottom: 10px;
       }
@@ -42,6 +42,7 @@
         padding: 10px;
         border-radius: 5px;
         text-decoration: none;
+        font-weight: bold;
         color: white;
       }
       .book-now:hover {
