--- a/templates/About.html
+++ b/templates/About.html
@@ -11,45 +11,34 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
   </head>
-  <body style="background-color: bisque">
-    <div class="container mt-5">
-      <h1 class="text-center mb-4 text-primary">About Us</h1>
-      <p class="lead text-center">
-        Welcome to <strong>Luxury Stay</strong>, where elegance and comfort
-        redefine your travel experience.
-      </p>
-      <p class="text-center">
-        Our hotel offers world-class amenities, impeccable service, and a stay
-        that ensures ultimate relaxation and luxury.
-      </p>
+  <body style="background-color: rgb(217, 214, 218)">
+    {%for a in about%}
+    <div class="container-fluid mt-5 bg-white">
+      <h1 class="text-center mb-4 text-primary">{{a.header1}}</h1>
+      <p class="lead text-center">{{a.header1_des}}</p>
 
-      <h2 class="mt-4">Our Vision</h2>
-      <p>
-        At Luxury Stay, we aim to provide an exceptional hospitality experience
-        by blending comfort, style, and personalized service.
-      </p>
+      <h2 class="mt-4">{{a.header2}}</h2>
+      <p>{{a.header2_des}}</p>
 
-      <h2 class="mt-4">Our Services</h2>
+      <h2 class="mt-4">{{a.header3}}</h2>
       <ul>
-        <li>Luxuriously designed rooms and suites</li>
-        <li>Fine dining with gourmet cuisine</li>
-        <li>Exclusive spa and wellness facilities</li>
-        <li>State-of-the-art conference and event spaces</li>
+        <li>{{a.header3_des1}}</li>
+        <li>{{a.header3_des2}}</li>
+        <li>{{a.header3_des3}}</li>
+        <li>{{a.header3_des4}}</li>
       </ul>
 
-      <h2 class="mt-4">Why Choose Us?</h2>
-      <p>
-        Situated in prime locations, Luxury Stay offers easy access to city
-        attractions while providing a peaceful and elegant retreat. Our
-        dedicated staff ensures an unforgettable stay tailored to your needs.
-      </p>
+      <h2 class="mt-4">{{a.header4}}</h2>
+      <p>{{a.header4_des}}</p>
 
-      <h2 class="mt-4">Contact Us</h2>
+      <h2 class="mt-4">{{a.header5}}</h2>
       <p>
-        For reservations and inquiries, reach out to us at
-        <strong>support@luxurystay.com</strong> or visit our
-        <a href="/Contact" class="btn btn-primary">Contact Us</a> page.
+        {{a.header5_des}}
+        <a href="/Contact" class="btn btn-primary">Contact Us</a>
       </p>
+      <hr />
     </div>
+    {%endfor%}
   </body>
 </html>
+{%include 'Footer.html'%}
