--- a/templates/Contact-Us.html
+++ b/templates/Contact-Us.html
@@ -27,26 +27,22 @@
     <div class="container mt-5">
       <div class="row">
         <!-- Left Side: Contact Details -->
+        {%for c in personal%}
         <div class="col-md-5 bg-light p-4 rounded shadow">
-          <h2 class="text-primary">Contact Us</h2>
-          <p>
-            We would love to hear from you! Get in touch with us for any
-            inquiries.
-          </p>
+          <h2 class="text-primary">{{c.header}}</h2>
+          <p>{{c.mess}}</p>
 
           <div class="d-flex align-items-center mb-3">
             <i class="fas fa-map-marker-alt fa-lg text-primary me-2"></i>
-            <p class="mb-0"><strong>Ardas Group Of Hotel</strong>, Rajkot</p>
+            <p class="mb-0"><strong>{{c.name}}</strong></p>
           </div>
 
           <div class="d-flex align-items-center mb-3">
             <i class="fas fa-envelope fa-lg text-primary me-2"></i>
             <p class="mb-0">
               Email:
-              <a
-                href="mailto:ashishkumarsingh.116059@marwadiuniversity.ac.in"
-                class="text-decoration-none"
-                >ashishkumarsingh</a
+              <a href="mailto:{{c.email}}" class="text-decoration-none"
+                >{{c.email}}</a
               >
             </p>
           </div>
@@ -55,29 +51,15 @@
             <i class="fas fa-phone fa-lg text-primary me-2"></i>
             <p class="mb-0">
               Phone:
-              <a href="tel:2365789279" class="text-decoration-none"
-                >+91 2365789279</a
+              <a href="tel:{{c.phone}}" class="text-decoration-none"
+                >{{c.phone}}</a
               >
             </p>
           </div>
 
           <!-- Social Media Links -->
-          <div class="mt-3">
-            <a href="#" class="text-primary me-3"
-              ><i class="fab fa-facebook fa-lg"></i
-            ></a>
-            <a href="#" class="text-primary me-3"
-              ><i class="fab fa-twitter fa-lg"></i
-            ></a>
-            <a href="#" class="text-primary me-3"
-              ><i class="fab fa-instagram fa-lg"></i
-            ></a>
-            <a href="#" class="text-primary"
-              ><i class="fab fa-linkedin fa-lg"></i
-            ></a>
-          </div>
         </div>
-
+        {%endfor%}
         <!-- Right Side: Contact Form -->
         <div class="col-md-6 ms-auto">
           <form
