--- a/templates/Features.html
+++ b/templates/Features.html
@@ -10,9 +10,6 @@
         font-family: "Arial", sans-serif;
         margin: 0;
         padding: 0;
-        background-image: url("https://images.squarespace-cdn.com/content/v1/57125c2c2b8dde54a34b537f/1598519777811-FO5ABYWP3EDDIL14MNMT/ke17ZwdGBToddI8pDm48kNvT88LknE-K9M4pGNO0Iqd7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1USOFn4xF8vTWDNAUBm5ducQhX-V3oVjSmr829Rco4W2Uo49ZdOtO_QXox0_W7i2zEA/stella_island_luxury_resort_spa_crete_itravelling_4.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
         text-align: center;
       }
       .container {
@@ -67,7 +64,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <h1>Our Hotel Features In All India</h1>
 
       <div class="feature-section">
