--- a/templates/Footer.html
+++ b/templates/Footer.html
@@ -15,7 +15,7 @@
     <title>Luxury Stay</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item">
