--- a/templates/Header.html
+++ b/templates/Header.html
@@ -61,7 +61,7 @@
           <li><a href="/Contact">Contact</a></li>
         </ul>
       </nav>
-      <a href="#booking" class="book-now">Book Now</a>
+      <a href="#BookNow" class="book-now">Book Now</a>
     </header>
   </body>
 </html>
