--- a/templates/Footer.html
+++ b/templates/Footer.html
@@ -15,35 +15,33 @@
     <title>Luxury Stay</title>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg-light">
       <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item">
-            <a
-              href="/Dashboard"
-              class="nav-link px-2 text-body-secondary fw-bolder"
+            <a href="/Dashboard" class="nav-link px-2 text-body-white fw-bolder"
               >Home</a
             >
           </li>
           <li class="nav-item">
             <a
               href="/Features"
-              class="nav-link px-2 text-body-secondary fw-bolder"
+              class="nav-link px-2 text-body-primary fw-bolder"
               >Features</a
             >
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-body-secondary fw-bolder"
+            <a href="#" class="nav-link px-2 text-body-primary fw-bolder"
               >Pricing</a
             >
           </li>
           <li class="nav-item">
-            <a href="/About" class="nav-link px-2 text-body-secondary fw-bolder"
+            <a href="/About" class="nav-link px-2 text-body-primary fw-bolder"
               >About</a
             >
           </li>
         </ul>
-        <p class="text-center text-body-secondary fw-bolder">
+        <p class="text-center text-body-primary fw-bolder">
           © 2024 Company, Inc
         </p>
       </footer>
