--- a/templates/Contact-Us.html
+++ b/templates/Contact-Us.html
@@ -7,9 +7,10 @@
     <title>Luxury Stay</title>
     <style>
       body {
-        background-image: url("https://images.squarespace-cdn.com/content/v1/57125c2c2b8dde54a34b537f/1598519777811-FO5ABYWP3EDDIL14MNMT/ke17ZwdGBToddI8pDm48kNvT88LknE-K9M4pGNO0Iqd7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1USOFn4xF8vTWDNAUBm5ducQhX-V3oVjSmr829Rco4W2Uo49ZdOtO_QXox0_W7i2zEA/stella_island_luxury_resort_spa_crete_itravelling_4.jpg");
+        /* background-image: url("https://images.squarespace-cdn.com/content/v1/57125c2c2b8dde54a34b537f/1598519777811-FO5ABYWP3EDDIL14MNMT/ke17ZwdGBToddI8pDm48kNvT88LknE-K9M4pGNO0Iqd7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1USOFn4xF8vTWDNAUBm5ducQhX-V3oVjSmr829Rco4W2Uo49ZdOtO_QXox0_W7i2zEA/stella_island_luxury_resort_spa_crete_itravelling_4.jpg");
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: cover; */
+        background-color: black;
       }
     </style>
     <link
