--- a/templates/Payment.html
+++ b/templates/Payment.html
@@ -57,6 +57,7 @@
         <label for="cvv">CVV:</label>
         <input type="text" id="cvv" placeholder="Enter CVV" required />
         <img
+          style="height: fit-content; width: fit-content"
           src="https://tse2.mm.bing.net/th?id=OIP.b51Dv6nVMjWntrwxD7VEiwHaHa&pid=Api&P=0&h=180"
         />
         <button type="submit">Pay Now</button>
