--- a/templates/Services.html
+++ b/templates/Services.html
@@ -22,6 +22,11 @@
       img {
         width: 70%;
         height: 250px;
+      }h5{
+        text-align: center;
+        text-decoration: solid;
+        font-weight:bolder;
+        
       }
     </style>
   </head>
