--- a/templates/Header.html
+++ b/templates/Header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <header class="topbar">
   <div class="container">
-    <div>Call us: <a href="tel:+123456789">+1 (234) 567-89</a></div>
+    <div>Call us: <a href="tel:+123456789">+91 7857892718</a></div>
     <div>Open 24/7 — We're here to help</div>
   </div>
 </header>
